# renovation-tracker-backend-2025

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.md
src/renovation_tracker/: config.py  create.yaml  database.py  main.py  models.py  nlp_predict.py  prompt.yaml  room_type_predictor_prompt.yaml  text_ai.yaml  train.py  training.ipynb  yolo-training.py
src/renovation_tracker/pydantic_models/: __init__.py  listings.py  photos.py  renovations.py
src/renovation_tracker/routers/: listings_router.py  photos_router.py  renovations_router.py
