[project]
name = "renovation_tracker"
version = "0.1.0"
description = "Renovation Tracker API to detect and extract renovation information"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "databases[sqlite]",
    "ipykernel>=7.0.1",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "openai>=2.3.0",
]
