[project]
name = "renovation_tracker"
version = "0.1.0"
description = "Renovation Tracker API to detect and extract renovation information"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "databases[sqlite]",
    "aiomysql>=0.2.0",
    "cryptography>=46.0.1",
    "pymysql>=1.1.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2",
    "ultralytics>=8.3.218",
]

[tool.uv]
package = true
native-tls = true

[project.scripts]
db-create = "renovation_tracker.main:create_tables"
db-drop = "renovation_tracker.main:drop_tables"
db-reset = "renovation_tracker.main:reset_db"
db-seed = "renovation_tracker.main:seed_data"